{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 70,
  "lineage": "34506ee8-2b92-80a9-1cbe-80697186d3bb",
  "resources": [
    {
      "module": "module.Infra",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-049f556f703615ff1",
            "domain": "vpc",
            "id": "eipalloc-049f556f703615ff1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-232-89-173.compute-1.amazonaws.com",
            "public_ip": "3.232.89.173",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "challenge_machine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "key1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d4ac5b634553e16",
            "arn": "arn:aws:ec2:us-east-1:063048070623:instance/i-0f33c9c063918dc83",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f33c9c063918dc83",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cf65c3cc3c733113",
            "private_dns": "ip-172-31-91-197.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.91.197",
            "public_dns": "ec2-44-202-240-141.compute-1.amazonaws.com",
            "public_ip": "44.202.240.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01d643bf4df4636a8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f8cab87b28df5325",
            "tags": {
              "Name": "t2.micro"
            },
            "tags_all": {
              "Name": "t2.micro"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0567ee03ca0e06d90"
            ]
          }
        },
        {
          "index_key": "key2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d4ac5b634553e16",
            "arn": "arn:aws:ec2:us-east-1:063048070623:instance/i-00692186fe27e52f9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00692186fe27e52f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04a69c44f698554c2",
            "private_dns": "ip-172-31-6-90.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.6.90",
            "public_dns": "ec2-3-232-55-39.compute-1.amazonaws.com",
            "public_ip": "3.232.55.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-033183cae00ab8e01",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07488e870f948d075",
            "tags": {
              "Name": "t3.micro"
            },
            "tags_all": {
              "Name": "t3.micro"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0567ee03ca0e06d90"
            ]
          }
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "resource2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d4ac5b634553e16",
            "arn": "arn:aws:ec2:us-east-1:063048070623:instance/i-055bece4f250519ae",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-055bece4f250519ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ba48e756b030a930",
            "private_dns": "ip-172-31-82-68.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.82.68",
            "public_dns": "ec2-35-171-23-161.compute-1.amazonaws.com",
            "public_ip": "35.171.23.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-022aa98a8e452d106",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f8cab87b28df5325",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0567ee03ca0e06d90"
            ]
          },
          "dependencies": [
            "module.EC2.aws_key_pair.deployer"
          ]
        }
      ]
    },
    {
      "module": "module.Infra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063048070623:internet-gateway/igw-086b0734f33e107c0",
            "id": "igw-086b0734f33e107c0",
            "owner_id": "063048070623",
            "vpc_id": "vpc-0c7337179c02f4ada"
          },
          "dependencies": [
            "module.Infra.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.Infra",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-049f556f703615ff1",
            "connectivity_type": "public",
            "id": "nat-0ecf85b9e92c8d2d0",
            "network_interface_id": "eni-0e21ab924ea6ab895",
            "private_ip": "10.0.0.173",
            "public_ip": "3.232.89.173",
            "subnet_id": "subnet-04d5b5b141205cfb4"
          },
          "dependencies": [
            "module.Infra.aws_eip.nateIP",
            "module.Infra.aws_subnet.publicsubnets",
            "module.Infra.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.Infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063048070623:route-table/rtb-05d99304794a3b73f",
            "id": "rtb-05d99304794a3b73f",
            "owner_id": "063048070623",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ecf85b9e92c8d2d0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c7337179c02f4ada"
          },
          "dependencies": [
            "module.Infra.aws_eip.nateIP",
            "module.Infra.aws_nat_gateway.NATgw",
            "module.Infra.aws_subnet.publicsubnets",
            "module.Infra.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.Infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063048070623:route-table/rtb-0382d48975e1ef2c5",
            "id": "rtb-0382d48975e1ef2c5",
            "owner_id": "063048070623",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-086b0734f33e107c0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c7337179c02f4ada"
          },
          "dependencies": [
            "module.Infra.aws_internet_gateway.IGW",
            "module.Infra.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.Infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067651d325c9a9601",
            "route_table_id": "rtb-05d99304794a3b73f",
            "subnet_id": "subnet-02310401f8d805a49"
          },
          "dependencies": [
            "module.Infra.aws_eip.nateIP",
            "module.Infra.aws_nat_gateway.NATgw",
            "module.Infra.aws_route_table.PrivateRT",
            "module.Infra.aws_subnet.privatesubnets",
            "module.Infra.aws_subnet.publicsubnets",
            "module.Infra.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.Infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0965730b07af16b91",
            "route_table_id": "rtb-0382d48975e1ef2c5",
            "subnet_id": "subnet-04d5b5b141205cfb4"
          },
          "dependencies": [
            "module.Infra.aws_internet_gateway.IGW",
            "module.Infra.aws_route_table.PublicRT",
            "module.Infra.aws_subnet.publicsubnets",
            "module.Infra.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.Infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063048070623:subnet/subnet-02310401f8d805a49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02310401f8d805a49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063048070623",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c7337179c02f4ada"
          },
          "dependencies": [
            "module.Infra.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.Infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063048070623:subnet/subnet-04d5b5b141205cfb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d5b5b141205cfb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063048070623",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c7337179c02f4ada"
          },
          "dependencies": [
            "module.Infra.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.Infra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063048070623:vpc/vpc-0c7337179c02f4ada",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-03a8e69333e5f6c20",
            "default_route_table_id": "rtb-0b8389437c51d79af",
            "default_security_group_id": "sg-0efe8ced5a3c71b6c",
            "dhcp_options_id": "dopt-07f9f846a37c9d6c0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c7337179c02f4ada",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b8389437c51d79af",
            "owner_id": "063048070623"
          }
        }
      ]
    }
  ]
}